Change the margin of the bio section

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       </div>
     </div>
   </header>
-  <section class="bg-primary" id="about">
+  <section class="bg-primary about-me" id="about">
     <div class="container">
       <div class="row">
         <div class="col-sm-3 col-md-3">
           <img class="img-circle" src="./images/me.jpg" alt="my-pic" id="my-pic">
         </div>
         <div class="col-sm-9 col-md-9">
-          <h2>About Me</h2>
+          <h2 class="about-title">About Me</h2>
           <p>Hello, my name is Zui Shen. I am a new grad from the University of Southern California in computer science with knowledge and experience in web development, responsive design and searching engine. I’m a fast learner with great passion on front end web development and have excellent attention for detail. Currently, I’m actively seeking entry level full-time front-end web developer position, so let’s get in touch.</p>
           <p><span style="font-weight: bold">Skills</span>: HTML5, CSS3, JavaScript, Java, PHP, C/C++, Shell scripting, Python, SQL, jQuery, Bootstrap,KnockoutJS, Grunt, Git/GitHub.</p>
         </div>
