update: Add project description for overlays.

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
             <div class="row">
             	<div class="col-lg-4 col-md-6 text-center">
                 <div class="item">
-                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Kernel works on Weenix" data-content="Weenix OS kernel programming" data-link="http://github.com/zuishen/CSCI402.git">
+                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Arcade Game Clone" data-content="This project aims to design and develop an arcade game that the player need to avoid enemy and get to the goal." data-link="http://github.com/zuishen/CSCI402.git">
                     <img src="./images/game.png" style="width:100%;">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
-                        <h3>Game</h3>
-                        <p>Weenix OS kernel programming</p>
+                        <h3>Arcade Game Clone</h3>
+                        <p>This project aims to design and develop an arcade game that the player need to avoid enemy and get to the goal.</p>
                       </div>
                     </div>
                   </a>
@@ -77,12 +77,12 @@
               </div>
               <div class="col-lg-4 col-md-6 text-center">
                 <div class="item">
-                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Weather Forecast" data-content="a weather forecast webapp with responsive design" data-link="http://jasonshen.xyz/forecast/">
+                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Neighborhood Map" data-content="This is a map based single page web app which allows users to find the neighbor places near universities." data-link="http://jasonshen.xyz/forecast/">
                     <img src="./images/map.png" style="width:100%;">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
                         <h3>Neighborhood Map</h3>
-                        <p>a weather forecast webapp with responsive design</p>
+                        <p>This is a map based single page web app which allows users to find the neighbor places near universities.</p>
                       </div>
                     </div>
                   </a>
@@ -90,12 +90,12 @@
               </div>
               <div class="col-lg-4 col-md-6 text-center">
                 <div class="item">
-                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Weather Forecast" data-content="a weather forecast webapp with responsive design" data-link="http://jasonshen.xyz/forecast/">
+                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Weather Forecast" data-content="The Weather Forecast project aims to develop a web application to help users get the detail weather forecast information about the address they input." data-link="http://jasonshen.xyz/forecast/">
                     <img src="./images/main.png" style="width:100%;">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
                         <h3>Weather Forecast</h3>
-                        <p>a weather forecast webapp with responsive design</p>
+                        <p>The Weather Forecast project aims to develop a web application to help users get the detail weather forecast information about the address they input.</p>
                       </div>
                     </div>
                   </a>
@@ -103,12 +103,12 @@
               </div>
               <div class="col-lg-4 col-md-6 text-center">
                 <div class="item">
-                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Kernel works on Weenix" data-content="Weenix OS kernel programming" data-link="http://github.com/zuishen/CSCI402.git">
+                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Web Search Engine on News Information Retrieval" data-content="This project aims to built a search engine based on Apache Solr for related news searching and apply page rank." data-link="http://github.com/zuishen/CSCI402.git">
                     <img src="./images/search.png" style="width:100%;">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
                         <h3>Web Search Engine on News Information Retrieval</h3>
-                        <p>Weenix OS kernel programming</p>
+                        <p>This project aims to built a search engine based on Apache Solr for related news searching and apply page rank.</p>
                       </div>
                     </div>
                   </a>
@@ -116,12 +116,12 @@
               </div>
               <div class="col-lg-4 col-md-6 text-center">
                 <div class="item">
-                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="trojaNow" data-content="the backend of an social app" data-link="http://github.com/zuishen/trojaNow.git">
+                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="trojaNow" data-content="TrojaNow is an social mobile app based on Android. The backend server is implemented with PHP. It provides REST API such as sign in, micro-blog posting and giving comments." data-link="http://github.com/zuishen/trojaNow.git">
                     <img src="./images/trojaNow.png" style="width:100%;">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
                         <h3>trojaNow</h3>
-                        <p>the backend of an social app</p>
+                        <p>TrojaNow is an social mobile app based on Android. The backend server is implemented with PHP. It provides REST API such as sign in, micro-blog posting and giving comments.</p>
                       </div>
                     </div>
                   </a>
@@ -129,12 +129,12 @@
               </div>
               <div class="col-lg-4 col-md-6 text-center">
                 <div class="item">
-                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Egocentric video processing" data-content="video highlights, query and stablization for wearable camera such as go pro" data-link="http://github.com/zuishen/EgocentricVideos">
+                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Egocentric video processing" data-content="The Egocentric Video processing is a Java based program which can generate stabilized video summary and provide the relevant video segment  searching by specific image." data-link="http://github.com/zuishen/EgocentricVideos">
                     <img src="./images/egocentric.png" style="width:100%;">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
                         <h3>Egocentric video processing</h3>
-                        <p>Video highlights, query and stablization for wearable camera such as go pro</p>
+                        <p>The Egocentric Video processing is a Java based program which can generate stabilized video summary and provide the relevant video segment  searching by specific image.</p>
                       </div>
                     </div>
                   </a>
@@ -142,12 +142,12 @@
               </div>
               <div class="col-lg-4 col-md-6 text-center">
                 <div class="item">
-                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Kernel works on Weenix" data-content="Weenix OS kernel programming" data-link="http://github.com/zuishen/CSCI402.git">
+                  <a href="#" class="thumbnail item" data-toggle="modal" data-target="#myModal" data-title="Kernel works on Weenix" data-content="This project is aim to finish some kernel works on Weenix, which is a Unix-like OS. In this project, we implemented processes and threads function for concurrency, Virtual File System interface and the virtual memory to allow the kernel to manage user address space." data-link="http://github.com/zuishen/CSCI402.git">
                     <img src="./images/weenix.png" style="width:100%;">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
                         <h3>Kernel works on Weenix</h3>
-                        <p>Weenix OS kernel programming</p>
+                        <p>This project is aim to finish some kernel works on Weenix, which is a Unix-like OS. In this project, we implemented processes and threads function for concurrency, Virtual File System interface and the virtual memory to allow the kernel to manage user address space.</p>
                       </div>
                     </div>
                   </a>
@@ -166,7 +166,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h4 class="modal-title" id="myModalLabel">Modal title</h4>
               </div>
-              <div class="modal-body">
+              <div class="modal-body content-modal">
                 ...
               </div>
               <div class="modal-footer">
@@ -261,7 +261,7 @@
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2 class="section-heading">Let's get in touch</h2>
           <hr class="primary">
-          <p>This is the initial version of my homepage and I'm still working on it. Have any suggestions? You can contact me! Thank you. </p>
+          <p> Currently, I’m actively seeking entry level full-time front-end web developer position, so let’s get in touch.</p>
         </div>
         <div class="col-lg-4 col-lg-offset-2 text-center phone">
           <span class="glyphicon glyphicon-earphone phone" aria-hidden="true"></span>
@@ -288,7 +288,7 @@
         <div class="col-md-12">
           <ul class="copyright">
             <li>&copy; 2016 Zui Shen | </li>
-            <li>Design by Zui Shen</li>
+            <li>Designed by Zui Shen</li>
           </ul>
         </div>
       </div>
@@ -303,7 +303,7 @@
       // If necessary, you could initiate an AJAX request here (and then do the updating in a callback).
       // Update the modal's content. We'll use jQuery here, but you could use a data binding library or other methods instead.
       var modal = $(this);
-      modal.find('.modal-title').text('New message to ' + title);
+      modal.find('.modal-title').text(title);
       modal.find('.modal-body').text(content);
       $('#project-link').attr('href', link);
       //modal.find('.modal-body input').val(recipient)
@@ -326,10 +326,11 @@
     //   console.log("aa");
     // });
 
-    $('.portfolio-box-caption').hover(function(event) {
-	  $(event.target).stop(true, true).css("opacity", 0.7);
-	}, function() {
-	  $(event.target).stop(true, true).css("opacity", 0);
+
+	$('.portfolio-box-caption').mouseover(function (event) {
+    	$(event.target).css("opacity", 0.7);
+	}).mouseout(function (event) {
+    	$(event.target).css("opacity", 0);
 	});
 
   $(function() {
