update: Modify the description of Arcade Game project

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
                         <h3>Arcade Game Clone</h3>
-                        <p>This project aims to design and develop an arcade game that the player need to avoid enemy and get to the goal.</p>
+                        <p>This is the project that I'm currently working on and it aims to design and develop an arcade game that the player need to avoid enemy and get to the goal.</p>
                       </div>
                     </div>
                   </a>
